# translation-cli

./: .gitignore  Cargo.toml  config.toml
src/: main.rs
